K8S/commands-depl.yaml
#Specifying the api version
apiVersion: apps/v1
#Kind of it
kind: Deployment
metadata:
  name: commands-depl
spec:
# how many replicas of this container will be running
  replicas: 1
  selector: 
    matchLabels:
      app: commandservice
  template:
    metadata:
      labels:
        app: commandservice
    spec:
      containers:
        - name: commandservice   
          image: jaberfeka/dofus-hdv:latest

---

apiVersion: v1
kind: Service
metadata: 
  name: commands-clusterip-srv
spec: 
  type: ClusterIP
  selector: 
    app: commandservice
  ports:
    - name: commandservice
      protocol: TCP
      port: 80
      targetPort: 80
