K8S/dofus-depl.yaml
#Specifying the api version
apiVersion: apps/v1
#Kind of it
kind: Deployment
metadata:
  name: dofus-depl
spec:
# how many replicas of this container will be running
  replicas: 1
  selector: 
    matchLabels:
      app: dofusservice
  template:
    metadata:
      labels:
        app: dofusservice
    spec:
      containers:
        - name: dofusservice   
          image: jaberfeka/dofusapi:latest

---

apiVersion: v1
kind: Service
metadata: 
  name: dofus-clusterip-srv
spec: 
  type: ClusterIP
  selector: 
    app: dofusservice
  ports:
    - name: dofusservice
      protocol: TCP
      port: 80
      targetPort: 80
