K8S/dofus-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: dofusnpservice-srv
spec:
  type: NodePort
  selector:
    app: dofusservice
  ports:
    - name : dofusservice
      protocol : TCP
      port : 80
      targetPort: 80
