K8S/dofushdv-depl.yaml
#Specifying the api version
apiVersion: apps/v1
#Kind of it
kind: Deployment
metadata:
  name: dofushdv-depl
spec:
# how many replicas of this container will be running
  replicas: 1
  selector: 
    matchLabels:
      app: dofushdvservice
  template:
    metadata:
      labels:
        app: dofushdvservice
    spec:
      containers:
        - name: dofushdvservice   
          image: jaberfeka/dofus-hdv:latest

---

apiVersion: v1
kind: Service
metadata: 
  name: dofus-clusterip-srv
spec: 
  type: ClusterIP
  selector: 
    app: dofushdvservice
  ports:
    - name: dofushdvservice
      protocol: TCP
      port: 80
      targetPort: 80
