K8S/dofushdv-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: dofushdvnpservice-srv
spec:
  type: NodePort
  selector:
    app: dofushdvservice
  ports:
    - name : dofushdvservice
      protocol : TCP
      port : 80
      targetPort: 80
