K8S/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: acme.com
      http: 
        paths:
          - path: /api/equipmentPrice
            pathType: Prefix
            backend:
              service:
                name: dofushdv-clusterip-srv
                port: 
                  number: 80
          - path: /api/equipments
            pathType: Prefix
            backend:
              service:
                name: dofus-clusterip-srv
                port: 
                  number: 80
